// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_triangle-data-uri Compile 1`] = `
".myclass {
  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' version='1.1' width='16' height='16' viewBox='0 0 16 16'%3E%3Cpolygon points='0,0 0,16 16,8' style='fill: rgb%280, 0, 0%29'%3E%3C/polygon%3E%3C/svg%3E");
}"
`;

exports[`chevron-data-uri Compile 1`] = `
".myclass {
  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='16' viewBox='0 0 10 16'%3E%3Cpath d='M1.25 1.25l7.5 6.75 -7.5 6.75' stroke-width='1.25' stroke='rgb%280, 0, 0%29' fill='none' stroke-linecap='square' stroke-linejoin='miter' vector-effect='non-scaling-stroke'/%3E%3C/svg%3E");
}"
`;

exports[`svg-data-uri Compile 1`] = `
".myclass {
  background: url("data:image/svg+xml,%3Csvg width='100' height='100'%3E%3Ccircle cx='50' cy='50' r='40' stroke='green' stroke-width='4' fill='yellow' /%3E%3C/svg%3E");
}"
`;
